Mon Dec 14 12:18:31 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
          Added many_by_many listener test to test framework.

Mon Dec 14 11:37:46 UTC 2009  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/dds4ccm/tests/SLDisabled/Receiver/SL_Disabled_Receiver_exec.cpp
          Solve minor bug in test

Mon Dec 14 11:18:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/examples/Hello/Receiver/Hello_Receiver_exec.cpp:
          Removed generated header

        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.h:
          Use ACE_CString for subplan names

        * DAnCE/ExecutionManager/ExecutionManager_Module.cpp:
          Removed commented out code

        * DAnCE/NodeApplication/NodeApplication_Impl.h:
          Removed not needed include

        * DAnCE/NodeManager/NodeManager_Impl.h
          Added missing include

Mon Dec 14 10:58:46 UTC 2009  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * bin/ciao_tests.lst:
        * connectors/dds4ccm/tests/SLDisabled:
        * connectors/dds4ccm/tests/SLDisabled/Base:
        * connectors/dds4ccm/tests/SLDisabled/Base/SL_Disabled_Base.idl:
        * connectors/dds4ccm/tests/SLDisabled/Base/SL_Disabled_Base.mpc:
        * connectors/dds4ccm/tests/SLDisabled/Connector:
        * connectors/dds4ccm/tests/SLDisabled/Connector/SL_Disabled_Connector.idl:
        * connectors/dds4ccm/tests/SLDisabled/Connector/SL_Disabled_Connector.mpc:
        * connectors/dds4ccm/tests/SLDisabled/Connector/SL_Disabled_Connector_exec.cpp:
        * connectors/dds4ccm/tests/SLDisabled/Connector/SL_Disabled_Connector_exec.h:
        * connectors/dds4ccm/tests/SLDisabled/descriptors:
        * connectors/dds4ccm/tests/SLDisabled/descriptors/Plan.cdp:
        * connectors/dds4ccm/tests/SLDisabled/descriptors/run_test.pl: